[project]
name = "flight_concierge"
version = "0.1.0"
description = "flight_concierge using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools] @ git+https://github.com/crewAIInc/crewAI.git@main#subdirectory=lib/crewai",
    "get-flight-airport-codes>=0.1.3",
    "get-flight-airports-nearby>=0.1.2",
    "get-flight-city-codes>=0.1.2",
    "get-flight-country-codes>=0.1.1",
]

[project.scripts]
kickoff = "flight_concierge.main:kickoff"
run_crew = "flight_concierge.main:kickoff"
plot = "flight_concierge.main:plot"
run_with_trigger = "flight_concierge.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "daniel-crewai-d42c35b9"
url = "https://app.crewai.com/pypi/daniel-crewai-d42c35b9"
explicit = true

[tool.crewai]
type = "flow"

[tool.uv.sources]
get-flight-country-codes = { index = "daniel-crewai-d42c35b9" }
get-flight-city-codes = { index = "daniel-crewai-d42c35b9" }
get-flight-airport-codes = { index = "daniel-crewai-d42c35b9" }
get-flight-airports-nearby = { index = "daniel-crewai-d42c35b9" }
